# darkpen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  WINDOWS_SETUP.md  darkpen.bat  darkpen.db  darkpen.desktop  darkpen.sh  darkpen_cli.py  darkpen_main.py  database.db  demo_darkpen.py  demo_mode.py  enhanced_ai_engine.py  install_deps.sh  launch_darkpen.py  main.py  pyproject.toml  quick_start.sh  requirements-dev.txt  requirements.txt  run.py  run_tests.sh  security_analysis_report_20250605_031009.html  security_analysis_report_20250605_031011.html  security_analysis_report_20250605_031012.html  setup.py  setup.sh  start_gui.sh  test_metasploit_integration.py  version.json
ai_engine/: recommendation_system.py
archive_for_cleanup/: darkpen_launcher.py  install.sh  launch_darkpen.py  quick_start_guide.py  run.sh  run_darkpen.py  run_gui.py  scans.db  setup.sh  upload_to_github.sh
backups/: pentest.db
config/: production.yml  settings.example.ini  settings.ini
core/: __init__.py  ai_analyzer.py  ai_engine.py  app.py  backup_manager.py  config_manager.py  database_manager.py  database_schema.py  error_handler.py  logger.py  metasploit_client.py  metasploit_handler.py  metasploit_integration.py  msf_manager.py  nmap_scanner.py  security_analyzer.py  tool_manager.py  tools_manager.py  update_manager.py
darkpen/: __init__.py
data/: vuln_db.sqlite
deployment/: install.sh  release.sh
docs/: LANDING_PAGE.md  download.html
gui/: __init__.py  compliance_mapping_dialog.py  cyberpunk_theme.py  darkpen_main.py  history_page.py  (+6 more)
(+19 files in other folders)
